Completed HTML login page assignment

--- a/HTML5 CSS3 Afternoon/progressbar.html
+++ b/HTML5 CSS3 Afternoon/progressbar.html
@@ -15,7 +15,7 @@
 
                }
                25%{
-                   background-color:aqua;
+                   background-color:aquacd;
                }
            }
     </style>   
